# MongoDb_CRUD_Rust_Axum-main

./: Cargo.toml  README.md
src/: constants.rs  main.rs
src/common_struct/: mod.rs
src/controllers/: user_controller.rs
src/db/: mod.rs
src/models/: mod.rs  user_module.rs
src/routers/: mod.rs  product_route.rs  user_route.rs
